--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon --exec npx babel-node src/index.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix my-blog && npm run build --prefix my-blog",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
